2004-02-23  Pavol Bosik <Pavol.Bosik@siemens.com>
	
	* src/defaults.c
	* src/message-manager.cc
	* src/project_dbase.c
	* src/anjuta.c:
	Fixed bugs #890609 and #890609

2004-02-23  Naba Kumar  <naba@gnome.or>

	* src/message-manager.cc: Disconnects menuitem signal properly.
	Fixed bug #901723.
	
	* src/mainmenu_callbacks.c: Do not reload new files. Fixed
	bug #900897.
	
2004-02-20  Naba Kumar  <naba@gnome.org>

	* src/message-manager-private.[c,h]: Implemented keypress
	event for the terminal and resets it when ctrl c or ctrl d
	is pressed. But it doesn't seem to be working on keypress.
	Added a workaround to let it work on key release instead.
	(bug #878357).
	
	* src/search-replace: Fixed compiler warnings.
	
2004-02-18  Franco Catrin  <fcatrin@tuxpan.com>

	* src/mainmenu_callbacks.c, widgets/gnomefilelist.c
	Use defined file name when saving new files	(fixes bug #898105)
	Don't change filename when clicking on a directory
	
	BTW: Happy birthday to me :-)
	
2004-02-18  Jean-Noel Guiheneuf <guiheneuf.jean-noel@wanadoo.fr>
	* src/search-replace.c : Fixed a crash bug 
	Crash on Find & Replace (#887833)
	
2004-02-18  Naba Kumar  <naba@gnome.org>

	* src/executer.c: Fixed a crash bug.
	
	* widgets/gnomefilelist.[h,c], src/fileselection.[h,c],
	src/debugger.c, project_database_gui.c, src/anjuta.[h,c],
	src/anjuta_cbs.c, src/project_database.h: Subclasses GtkDialog
	instead of GtkWindow (Part of bug #671596).
	
	* anjuta.glade, src/breakpoints.c, src/anjuta_info.c,
	src/registers_gui.c, src/registers_cbs.[h,c],
	src/sharedlib_gui.c, src/sharedlib_cbs.[c,h],
	src/signals_cbs.[h,c], src/signals_gui.c, src/executer.c,
	src/compiler_options.c, src/an_file_view.c, start-with.c,
	src/anjuta-tools.c, help.c:

	Added "close" buttons on all
	dialogs (HIG) and fixed to properly response to ESC close
	(Part of bug #671596).

	* src/launcher.c: Disabled printing of long debug lines.
	
	* src/utilities.h: Fixed a compiler warning.
	
2004-02-17  Franco Catrin  <fcatrin@tuxpan.com>
